index content done(-ish)

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,32 @@
 </head>
 <body>
     <main class="contentainer">
-
+        <div class="page_intro">
+            <h1>GENERIC HIPSTER COFFEE</h1>
+            <h2>Specialty coffee, fresh food & local community. </h2>
+        </div>
+        <div>
+            <img class="index_image" src="/img/counter.jpg" alt="Counter">
+        </div>
+        <div class="index_contacts">
+            <div class="index_contacts__item">
+                <h1>Opening hours</h1>
+                <p>Call +1 415-321-4567</p>
+            </div>
+            <div class="index_contacts__item">
+                <h1>Book a table</h1>
+                <p>sunday to  thursday: 8 am to 11 pm</p>
+                <p>friday to  saturday: 8 am to 1 am</p>
+            </div>
+            <div class="index_contacts__item">
+                <h1>Address</h1>
+                <p>321 Ivy St.</p>
+                <p>San Francisco, CA 94102</p>
+            </div>
+        </div>
+        <div>
+            <img class="index_image" src="/img/map_screenshot.jpg" alt="Counter">
+        </div>
     </main>
 </body>
 </html>
