menu-content spaced

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
             <h2>Specialty coffee, fresh food & local community. </h2>
         </div>
         <div>
-            <img class="index_image" src="/img/counter.jpg" alt="Counter">
+            <img class="big_image" src="/img/counter.jpg" alt="Counter">
         </div>
         <div class="index_contacts">
             <div class="index_contacts__item">
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div>
-            <img class="index_image" src="/img/map_screenshot.jpg" alt="Counter">
+            <img class="big_image" src="/img/map_screenshot.jpg" alt="Counter">
         </div>
     </main>
 </body>
