--- a/src/menu.html
+++ b/src/menu.html
@@ -10,6 +10,224 @@
     <title>Our menu</title>
 </head>
 <body>
-    
+    <main class="contentainer">
+        <div class="page_intro">
+            <h1>MENU</h1>
+        </div>
+        <div class="menu_menu">
+            <div class="menu_menu__column">
+                <div class="menu_menu__block">
+                    <h2>ESPRESSO COFFEE</h2>
+                    <div class="menu_group">
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu_menu__block">
+                    <h2>ICED</h2>
+                    <div class="menu_group">
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="menu_menu__column">
+                <div>
+                    <div class="menu_menu__block">
+                        <h2>FILTER COFFEE</h2>
+                        <div class="menu_group">
+                            <div class="menu_group__row">
+                                <div>Espresso</div>
+                                <div>3.8</div>
+                            </div>
+                            <div class="menu_group__row">
+                                <div>Doubleespresso</div>
+                                <div>4.9</div>
+                            </div>
+                            <div class="menu_group__row">
+                                <div>Espresso</div>
+                                <div>3.8</div>
+                            </div>
+                            <div class="menu_group__row">
+                                <div>Doubleespresso</div>
+                                <div>4.9</div>
+                            </div>
+                        </div>
+                        <h2>COFFEE SPECIALS</h2>
+                        <div class="menu_group">
+                            <div class="menu_group__row">
+                                <div>Espresso</div>
+                                <div>3.8</div>
+                            </div>
+                            <div class="menu_group__row">
+                                <div>Doubleespresso</div>
+                                <div>4.9</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu_menu__block">
+                    <h2>HOT</h2>
+                    <div class="menu_group">
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <h2>NON-ALCOHOLIC BEVERAGES</h2>
+        <div class="menu_menu">
+            <div class="menu_menu__column">
+                <div class="menu_menu__block">
+                    <h2>LEMONADES</h2>
+                    <div class="menu_group">
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Espresso</div>
+                            <div>3.8</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                        <div class="menu_group__row">
+                            <div>Doubleespresso</div>
+                            <div>4.9</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="menu_menu__column">
+                <div>
+                    <div class="menu_menu__block">
+                        <h2>WATER</h2>
+                        <div class="menu_group">
+                            <div class="menu_group__row">
+                                <div>Espresso</div>
+                                <div>3.8</div>
+                            </div>
+                            <div class="menu_group__row">
+                                <div>Doubleespresso</div>
+                                <div>4.9</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <img class="big_image" src="/img/map_screenshot.jpg" alt="Counter">
+        </div>
+    </main>
 </body>
 </html>
