menu-content dist 2

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div>
-            <img class="big_image" src="/img/map_screenshot.jpg" alt="Counter">
+            <img class="big_image" src="/img/map_screenshot.jpg" alt="Map">
         </div>
     </main>
 </body>
