--- a/src/coffee.html
+++ b/src/coffee.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style1.css">
 </head>
 <body>
+
+    <header>
+        <nav class="nav-header">
+            <img class="nav-logo" src="/img/logo.svg" alt="Obrazek">
+        <div class="nav-link-wrap">
+           <div> <a href="#" class="nav-link">Home</a></div>
+            <div><a href="#" class="nav-link" >Menu</a></div>
+            <div><a href="#" class="nav-link">Coffee</a></div>
+           <div> <a href="#" class="nav-link">Our Story</a></div>
+        </div>
+    </nav>
+    </header>
+
+    <footer>
+        <nav class="nav-footer">
+        <div class="nav-link-wrap-footer">
+           <div> <a href="#" class="nav-link">Home</a></div>
+            <div><a href="#" class="nav-link" >Menu</a></div>
+            <div><a href="#" class="nav-link">Coffee</a></div>
+           <div> <a href="#" class="nav-link">Our Story</a></div>
+        </div>
+       <div class="h3-div"><h3>#hipstersmakecoffe</h3></div>
+        <div class="h4-div"><h4>Follow us on <a href="">Twitter</a> and <a href="">Instagram</a></h4></div>
+    </nav>
+    </footer>
     
 </body>
 </html>
