pages w/ headers and footers

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,17 @@
     <title>Welcome to Hipster Coffee</title>
 </head>
 <body>
+    <header>
+        <nav class="nav-header">
+            <img class="nav-logo" src="/img/logo.svg" alt="Obrazek">
+        <div class="nav-link-wrap">
+           <div> <a href="#" class="nav-link">Home</a></div>
+            <div><a href="#" class="nav-link" >Menu</a></div>
+            <div><a href="#" class="nav-link">Coffee</a></div>
+           <div> <a href="#" class="nav-link">Our Story</a></div>
+        </div>
+    </nav>
+    </header>
     <main class="contentainer">
         <div class="page_intro">
             <h1>GENERIC HIPSTER COFFEE</h1>
@@ -38,5 +49,17 @@
             <img class="big_image" src="/img/map_screenshot.jpg" alt="Map">
         </div>
     </main>
+    <footer>
+        <nav class="nav-footer">
+        <div class="nav-link-wrap-footer">
+           <div> <a href="#" class="nav-link">Home</a></div>
+            <div><a href="#" class="nav-link" >Menu</a></div>
+            <div><a href="#" class="nav-link">Coffee</a></div>
+           <div> <a href="#" class="nav-link">Our Story</a></div>
+        </div>
+       <div class="h3-div"><h3>#hipstersmakecoffe</h3></div>
+        <div class="h4-div"><h4>Follow us on <a href="">Twitter</a> and <a href="">Instagram</a></h4></div>
+    </nav>
+    </footer>
 </body>
 </html>
