mysterio done(-ish)

--- a/src/index.html
+++ b/src/index.html
@@ -45,10 +45,11 @@
                 <p>San Francisco, CA 94102</p>
             </div>
         </div>
-        <div>
-            <img class="big_image" src="/img/map_screenshot.jpg" alt="Map">
-        </div>
+        
     </main>
+    <div class="big_image_bg">
+        <img class="big_image" src="/img/map_screenshot.jpg" alt="Map">
+    </div>
     <footer>
         <nav class="nav-footer">
         <div class="nav-link-wrap-footer">
