--- a/src/menu.html
+++ b/src/menu.html
@@ -236,10 +236,10 @@
                 </div>
             </div>
         </div>
-        <div>
+    </main>
+        <div class="big_image_bg">
             <img class="big_image" src="/img/espresso-machine-detail.jpg" alt="Map">
         </div>
-    </main>
     <footer>
         <nav class="nav-footer">
         <div class="nav-link-wrap-footer">
