--- a/src/coffee.html
+++ b/src/coffee.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/style1.css">
+    <link rel="stylesheet" href="/css/coffee.css">
+
 </head>
 <body>
 
@@ -19,7 +21,48 @@
         </div>
     </nav>
     </header>
+<main>
+    <h2>COFFEE</h2>
+    <p>We work with specialty coffee from current crops which is carefully roasted. Our coffee is fruity, juicy and never boring. We bring you the best from leading european specialty roasteries, currently mostly from Square Mile Coffee Roasters, a multi award winning coffee roasting company based in East London. </p>
+    <p>You can currently buy these beans in 350g bags</p>
 
+
+<div class="div-coffee-item-wrap">
+            <div class="random">
+             <img src="/img/smcr-quejina.jpg" alt="Pic" class="pictures">
+                <div class="div-text">
+                    <p class="p-italic">redcurrant/honeysuckle/juicy</p>
+                    <p>Fruity redcurrant and sweet honeysuckle flavours. An incredibly juicy coffee which we struggled to decide on the right berry descriptor, but raspberry, blackberry and blueberry were also in the running! </p>
+                </div>
+            </div>
+    
+                <div class="random">
+                    <img src="img/smcr-mormora.jpg" alt="Pic" class="pictures">
+                    <div class="div-text">
+                        <p>blackberry/orange/silky</p>
+                        <p>Fruity, sweet notes of dried mango, strawberry and passionfruit sit alongside a delicious creamy mouthfeel making this a tasty summer Ethiopian, hot or cold. </p>
+                    </div>
+                </div>
+          
+            <div class="random">
+                <img src="img/smcr-kamwangi.jpg" alt="Pic" class="pictures">
+                <div class="div-text">
+                    <p>blackberry/orange/silky</p>
+                    <p>This is one fruit filled espresso! From citrus fruits, such as orange, grapefruit and clementine, to berries of the black, blue and red variety, this is fruit turned up to 11, all wrapped up in a silky smooth body. </p>
+                </div>
+            </div>
+            <div class="random">
+                <img src="img/smcr-decaf-espresso.jpg" alt="Pic" class="pictures">
+                   <div class="div-text">
+                        <p>caramel/apple/cinnamon</p>
+                        <p>This is a single origin espresso from San Carlos in El Salvador, think sweet caramel and apple notes alongside sprinklings of cinnamon in the finish. </p>
+                   </div>
+                </>
+            </div>
+</div>
+
+
+</main>
     <footer>
         <nav class="nav-footer">
         <div class="nav-link-wrap-footer">
