--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
  
     <link rel="stylesheet" href="/css/style1.css">      <!--Common css-->
     <link rel="stylesheet" href="/css/index.css">       <!--Page specific css-->
@@ -15,9 +17,9 @@
             <img class="nav-logo" src="/img/logo.svg" alt="Obrazek">
         <div class="nav-link-wrap">
            <div> <a href="#" class="nav-link">Home</a></div>
-            <div><a href="#" class="nav-link" >Menu</a></div>
-            <div><a href="#" class="nav-link">Coffee</a></div>
-           <div> <a href="#" class="nav-link">Our Story</a></div>
+            <div><a href="menu.html" class="nav-link" >Menu</a></div>
+            <div><a href="coffee.html" class="nav-link">Coffee</a></div>
+           <div> <a href="mysterio.html" class="nav-link">Our Story</a></div>
         </div>
     </nav>
     </header>
@@ -53,10 +55,10 @@
     <footer>
         <nav class="nav-footer">
         <div class="nav-link-wrap-footer">
-           <div> <a href="#" class="nav-link">Home</a></div>
-            <div><a href="#" class="nav-link" >Menu</a></div>
-            <div><a href="#" class="nav-link">Coffee</a></div>
-           <div> <a href="#" class="nav-link">Our Story</a></div>
+            <div> <a href="#" class="nav-link">Home</a></div>
+            <div><a href="menu.html" class="nav-link" >Menu</a></div>
+            <div><a href="coffee.html" class="nav-link">Coffee</a></div>
+           <div> <a href="mysterio.html" class="nav-link">Our Story</a></div>
         </div>
        <div class="h3-div"><h3>#hipstersmakecoffe</h3></div>
         <div class="h4-div"><h4>Follow us on <a href="">Twitter</a> and <a href="">Instagram</a></h4></div>
