--- a/src/mysterio.html
+++ b/src/mysterio.html
@@ -10,16 +10,16 @@
     <link rel="stylesheet" href="/css/mysterio.css">       <!--Page specific css-->
 
 
-    <title>Document</title>
+    <title>Our Story</title>
 </head>
 <body>
     <header>
         <nav class="nav-header">
             <img class="nav-logo" src="/img/logo.svg" alt="Obrazek">
         <div class="nav-link-wrap">
-           <div> <a href="#" class="nav-link">Home</a></div>
-            <div><a href="#" class="nav-link" >Menu</a></div>
-            <div><a href="#" class="nav-link">Coffee</a></div>
+           <div> <a href="index.html" class="nav-link">Home</a></div>
+            <div><a href="menu.html" class="nav-link" >Menu</a></div>
+            <div><a href="coffee.html" class="nav-link">Coffee</a></div>
            <div> <a href="#" class="nav-link">Our Story</a></div>
         </div>
     </nav>
@@ -57,9 +57,9 @@
     <footer>
         <nav class="nav-footer">
         <div class="nav-link-wrap-footer">
-           <div> <a href="#" class="nav-link">Home</a></div>
-            <div><a href="#" class="nav-link" >Menu</a></div>
-            <div><a href="#" class="nav-link">Coffee</a></div>
+            <div> <a href="index.html" class="nav-link">Home</a></div>
+            <div><a href="menu.html" class="nav-link" >Menu</a></div>
+            <div><a href="coffee.html" class="nav-link">Coffee</a></div>
            <div> <a href="#" class="nav-link">Our Story</a></div>
         </div>
        <div class="h3-div"><h3>#hipstersmakecoffe</h3></div>
